# my-ai-chat

./: .gitignore  README.md  pyrightconfig.json
.cursor/prompts/: backend_rules_generator.md  frontend_rules_generator.md  good_prompt.md  migrate_backend_to_langchain.md  thesys_c1_rules_generator.md
.cursor/rules/: backend-async-patterns.mdc  backend-clean-architecture.mdc  backend-dependency-management.mdc  backend-error-handling.mdc  backend-fastapi-patterns.mdc  backend-langchain-langgraph.mdc  backend-project-structure.mdc  backend-pydantic-models.mdc  backend-python-standards.mdc  backend-security.mdc  backend-testing.mdc  commits-and-language.mdc  frontend-project-structure.mdc  frontend-react-architecture.mdc  frontend-react-components.mdc  frontend-security.mdc  frontend-services-and-api.mdc  frontend-state-management.mdc  frontend-styling.mdc  frontend-testing.mdc  frontend-typescript-standards.mdc  frontend-vite-config.mdc  thesys-c1-backend-sdk.mdc  thesys-c1-frontend-sdk.mdc  thesys-c1-guiding-outputs.mdc  thesys-c1-langchain-integration.mdc  thesys-c1-overview.mdc  thesys-c1-project-architecture.mdc  thesys-c1-streaming-protocol.mdc  thesys-c1-tool-calling.mdc
backend/: README.md  llm_runner.py  main.py  pyproject.toml  thread_store.py
ui/: index.html
ui/src/: App.tsx  index.css
